# rplidar_sdk

./: CMakeLists.txt  rplidarTemplate.pc
sdk/sdk/include/: rplidar_driver.h
sdk/sdk/src/: rplidar_driver.cpp  rplidar_driver_TCP.h  rplidar_driver_serial.h
sdk/sdk/src/arch/linux/: net_socket.cpp
